[BUGFIX] Fix the %hr @extend on the csc-frame-ruler* rules

--- a/Resources/Private/Sass/Generic/_T3General.scss
+++ b/Resources/Private/Sass/Generic/_T3General.scss
@@ -9,11 +9,11 @@ CSC-Frames
 */
 .csc-frame-rulerBefore:before {
   content: '';
-  @extend %horizontal-ruler;
+  @extend %hr;
 }
 .csc-frame-rulerAfter:after {
   content: '';
-  @extend %horizontal-ruler;
+  @extend %hr;
 }
 
 .csc-frame-indent { padding: 0 10%; }
